<resources>
    <string name="app_name">agePredict</string>
    <string name="button">Button</string>
    <string name="image">image</string>
    <string name="import_image">Import Photo</string>
    <string name="Take_Photo" />
    <string name="take_photo">Take Photo</string>
    <string name="predict">Prediction from App</string>
    <string name="result">Result:</string>
    <string name="Inference_Time">Inference Time:</string>
    <string name="inference_time">Inference Time</string>
    <string name="display_heatmap">Display Heatmap</string>
    <string name="connect_to_server">Prediction from Server</string>
    <string name="heatmap">Request Heatmap</string>
    <string name="age_change">Age Change</string>
    <string name="scorecam">ScoreCam</string>
    <string name="gradcam">GradCam</string>
    <string name="smooth_saliency_map">Smooth Saliency Map</string>
    <string name="saliency_map">Saliency Map</string>
    <string name="take_import_photo">Take/Import Photo</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="next">next</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="health_info">Health Info</string>
    <string name="close">Close</string>
</resources>